<resources>
    <string name="app_name">Madarsoft</string>
    <string name="errorRequired">Required</string>
    <string name="add_User">Add user</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="job">Job</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="users">Users</string>
    <string name="years_old">years old</string>
</resources>